--- a/custom_components/pihole_v6/manifest.json
+++ b/custom_components/pihole_v6/manifest.json
@@ -1,11 +1,11 @@
 {
     "domain": "pihole_v6",
-    "version": "1.0.0",
     "name": "Pi-Hole V6 (Dev)",
-    "dependencies": [],
     "codeowners": ["@erikkamph"],
-    "requirements": ["pydantic==2.10.6", "validators==0.34.0"],
-    "iot_class": "local_polling",
     "config_flow": true,
-    "documentation": "https://github.com/erikkamph/hole/tree/main/README.md"
+    "documentation": "https://github.com/erikkamph/hole/tree/main/README.md",
+    "dependencies": [],
+    "iot_class": "local_polling",
+    "requirements": ["pydantic==2.10.6", "validators==0.34.0"],
+    "version": "1.0.0"
 }
