--- a/custom_components/pihole_v6/manifest.json
+++ b/custom_components/pihole_v6/manifest.json
@@ -5,6 +5,6 @@
     "config_flow": true,
     "documentation": "https://github.com/erikkamph/pihole_ci_v6/tree/main/README.md",
     "iot_class": "local_polling",
-    "requirements": ["pydantic==2.10.6", "validators==0.34.0"],
+    "requirements": ["pydantic==2.10.6", "validators==0.34.0", "opentelemetry-instrumentation-requests==0.52b0"],
     "version": "1.0.0"
 }
