Finished switching, started sensoring, added pihole to compose

--- a/.gitignore
+++ b/.gitignore
@@ -180,3 +180,8 @@ cython_debug/
 
 # Built Visual Studio Code Extensions
 *.vsix
+
+development/ha
+development/ha/**
+development/pihole
+development/pihole/**
