--- a/custom_components/pihole_v6/manifest.json
+++ b/custom_components/pihole_v6/manifest.json
@@ -4,7 +4,7 @@
     "codeowners": ["@erikkamph"],
     "config_flow": true,
     "documentation": "https://github.com/erikkamph/pihole_ci_v6/tree/main/README.md",
-    "iot_class": "local_polling",
+    "iot_class": "cloud_polling",
     "requirements": ["pydantic==2.10.6", "validators==0.34.0", "aiofiles==24.1.0", "pandas==2.2.3"],
     "version": "2.0.2"
 }
